Fix long room name overflow

--- a/res/css/views/rooms/_RoomTile.pcss
+++ b/res/css/views/rooms/_RoomTile.pcss
@@ -63,6 +63,7 @@ limitations under the License.
             line-height: $font-18px;
         }
 
+        .mx_RoomTile_title,
         .mx_RoomTile_subtitle_text {
             overflow: hidden;
             text-overflow: ellipsis;
